<?xml version="1.0" encoding="utf-8"?>

<!-- Display product adding -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    tools:context=".ui.mainfragments.LikedFragment">

    <!-- Enter price -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/priceTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/price_hint"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextInputLayout"
        app:startIconDrawable="@drawable/icon_price">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/priceTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Enter name -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/name_hint"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/underlining_layout"
        app:startIconDrawable="@drawable/icon_write_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="20" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Layout description-->
    <TextView
        android:id="@+id/add_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/shanti_regular"
        android:gravity="center"
        android:text="@string/add_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/underlining_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638" />

    <!-- Text underlining -->
    <LinearLayout
        android:id="@+id/underlining_layout"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/underlining_line"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_text" />


    <!-- Add photo text -->
    <TextView
        android:id="@+id/add_photo_textView"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/shanti_regular"
        android:text="@string/add_photo_text"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceTextInputLayout"
        app:layout_constraintVertical_bias="0.043" />

    <!-- Add photo button-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="10dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:backgroundTint="@color/green"
        app:cornerRadius="50dp"
        app:icon="@drawable/add_circle"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toEndOf="@+id/add_photo_textView"
        app:layout_constraintTop_toBottomOf="@+id/priceTextInputLayout"
        app:layout_constraintVertical_bias="0.067" />

    <!-- Add characteristic button-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_characteristic_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/shanti_regular"
        android:gravity="center"
        android:text="@string/add_characteristic_text"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:backgroundTint="@color/add_characteristic_button_color"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton" />

    <!-- Publish product button-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/publish_product_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:fontFamily="@font/shanti_regular"
        android:text="@string/publish_product_text"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:backgroundTint="@color/green"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_characteristic_button"
        app:layout_constraintVertical_bias="0.299" />

</androidx.constraintlayout.widget.ConstraintLayout>