<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.mainfragments.MoreFragment">

    <!-- NavigationView -->
    <include layout="@layout/basket_nav" />

    <!-- Layout for content-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Layout description-->
        <TextView
            android:id="@+id/more_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/shanti_regular"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Text underlining -->
        <LinearLayout
            android:id="@+id/underlining_layout"
            android:layout_width="match_parent"
            android:layout_height="7dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/underlining_line"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/more_text" />


        <Button
            android:id="@+id/enter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/entry_button_background"
            android:fontFamily="@font/shanti_regular"
            android:text="@string/enter_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/registry_button"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/underlining_layout"
            app:layout_constraintVertical_bias="0.003" />

        <Button
            android:id="@+id/registry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/registry_button_background"
            android:fontFamily="@font/shanti_regular"
            android:foregroundGravity="center_vertical|center"
            android:text="@string/registry_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/enter_button"
            app:layout_constraintTop_toBottomOf="@+id/underlining_layout"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/more_recycler_view_item"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registry_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>